# runtime

./: .devcontainer.json  .editorconfig  .gitattributes  SHA3.cs  X25519-TODO.md  codeql-pack.lock.yml  qlpack.yml  sus-stackalloc.ql
.devcontainer/android/: Dockerfile
docs/project/: list-of-diagnostics.md
eng/: Versions.props
src/libraries/: tests.proj
src/libraries/Microsoft.Bcl.Cryptography/: Microsoft.Bcl.Cryptography.sln
src/libraries/Microsoft.Bcl.Cryptography/ref/: Microsoft.Bcl.Cryptography.cs  Microsoft.Bcl.Cryptography.csproj
src/libraries/Microsoft.Bcl.Cryptography/src/: Microsoft.Bcl.Cryptography.csproj
src/libraries/Microsoft.Bcl.Cryptography/tests/: Microsoft.Bcl.Cryptography.Tests.csproj
src/libraries/Native/Unix/System.Security.Cryptography.Native.Apple/: CMakeLists.txt  extra_libs.cmake  pal_aead.c  pal_aead.h  pal_cryptokit.h  pal_cryptokit.swift  pal_ecc.c  pal_seckey.c  pal_seckey.h  pal_signverify.c  pal_signverify.h  pal_symmetric.c  pal_symmetric.h  pal_x509chain.c  pal_x509chain.h
src/libraries/System.Formats.Asn1/src/: System.Formats.Asn1.csproj
src/libraries/System.IO.Hashing/src/: System.IO.Hashing.csproj
src/libraries/System.IO.Hashing/tests/: Crc32Tests_ParameterSet_Custom.cs  Crc64Tests_Parameterized_Custom.cs
src/libraries/System.Net.Http.WinHttpHandler/src/: System.Net.Http.WinHttpHandler.csproj
src/libraries/System.Net.Http/src/: System.Net.Http.csproj
src/libraries/System.Net.HttpListener/src/: System.Net.HttpListener.csproj
src/libraries/System.Net.Mail/src/: System.Net.Mail.csproj
src/libraries/System.Net.Security/src/: System.Net.Security.csproj
src/libraries/System.Private.CoreLib/src/: System.Private.CoreLib.Shared.projitems
src/libraries/System.Security.Cryptography.Algorithms/ref/: System.Security.Cryptography.Algorithms.cs
src/libraries/System.Security.Cryptography.Algorithms/src/: System.Security.Cryptography.Algorithms.csproj
src/libraries/System.Security.Cryptography.Algorithms/tests/: AesTests.cs  System.Security.Cryptography.Algorithms.Tests.csproj
src/native/libs/: configure.cmake
src/native/libs/Common/: pal_utilities.h
src/native/minipal/: configure.cmake  minipalconfig.h.in  random.c
(+352 files in other folders)
